--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <style name="Theme.Logeukes" parent="Theme.AppCompat.DayNight.DarkActionBar" />
+    <style name="Theme.Logeukes" parent="android:Theme.DeviceDefault" />
 </resources>
